--- a/src/main/resources/templates/tweet.html
+++ b/src/main/resources/templates/tweet.html
@@ -5,10 +5,10 @@
 <body>
 <h3>Hello, <span th:text="${twitterProfile.name}">Some User</span>!</h3>
 
-<h4>These are your friends:</h4>
+<h4>Here are some party related tweet:</h4>
 
 <ul>
-    <li th:each="friend:${friends}" th:text="${friend.name}">Friend</li>
+    <li th:each="tweet:${tweets}" th:text="${tweet}">Tweet</li>
 </ul>
 </body>
 </html>
