--- a/src/main/resources/templates/tweet.html
+++ b/src/main/resources/templates/tweet.html
@@ -1,14 +1,28 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Hello Twitter</title>
+    <script src="http://code.jquery.com/jquery-3.1.1.js" th:src="@{/webjars/jquery/3.1.1/jquery.min.js}"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/js/materialize.min.js"
+            th:src="@{/webjars/materializecss/0.97.7/js/materialize.min.js}"></script>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.7/css/materialize.min.css"
+          th:href="@{/webjars/materializecss/0.97.7/css/materialize.min.css}" rel="stylesheet"/>
+    <title>Twitter Demo</title>
+
+    <script>
+        $(document).ready(function () {
+            $(".button-collapse").sideNav();
+        });
+    </script>
 </head>
 <body>
-<h3>Hello, <span th:text="${twitterProfile.name}">Some User</span>!</h3>
+<div th:replace="/fragments/header :: nav">...</div>
+<h4>Showing related #beerPong tweets:</h4>
 
-<h4>Here are some party related tweet:</h4>
 
-<ul>
-    <li th:each="tweet:${tweets}" th:text="${tweet}">Tweet</li>
+<ul class="collection">
+    <li class="collection-item" th:each="tweet:${tweets}" th:text="| ${tweet.text} - @ ${tweet.user.name}|">...</li>
+
 </ul>
 </body>
 </html>
