adding heroku deployment and updating paths

--- a/src/main/resources/templates/twitterStream/stream.html
+++ b/src/main/resources/templates/twitterStream/stream.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="/header/libs">...</head>
+<head th:replace="header/libs">...</head>
 <body>
-<nav th:replace="/header/header">...</nav>
+<nav th:replace="header/header">...</nav>
 <div id="main-content" class="container">
     <div class="row">
         <div class="col-md-10">
