--- a/src/main/resources/templates/twitterSearch/search.html
+++ b/src/main/resources/templates/twitterSearch/search.html
@@ -1,7 +1,7 @@
 <html xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="/header/libs">...</head>
+<head th:replace="header/libs">...</head>
 <body>
-<nav th:replace="/header/header">...</nav>
+<nav th:replace="header/header">...</nav>
 <div class="container" id="main-content">
     <div class="jumbotron">
         <h3>Showing related #beerPong tweets:</h3>
