--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -1,13 +1,24 @@
-<nav class="navbar navbar-inverse">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/connect/twitter"><span class="glyphicon glyphicon-eye-open"
-                                                                  aria-hidden="true"></span> Twitter Thing</a>
+<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+    <div class="mdl-layout__header-row">
+        <span class="mdl-layout-title">Twitter-Thing</span>
+        <div class="mdl-layout-spacer"></div>
+        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+            <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
+                <i class="material-icons">search</i>
+            </label>
+            <div class="mdl-textfield__expandable-holder">
+                <input class="mdl-textfield__input" type="text" id="search" placeholder="Search Twitter...">
+                <label class="mdl-textfield__label" for="search">Enter your query...</label>
+            </div>
         </div>
-        <ul class="nav navbar-nav">
-            <li id="home"><a href="/connect/twitter">Home</a></li>
-            <li><a id="view-stream" href="/twitter-stream">Twitter Stream</a></li>
-            <li><a id="search" href="/twitter-search">Twitter Search</a></li>
+        <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="hdrbtn">
+            <i class="material-icons">more_vert</i>
+        </button>
+        <ul class="mdl-menu mdl-js-menu mdl-js-ripple-effect mdl-menu--bottom-right" for="hdrbtn">
+            <li class="mdl-menu__item">About</li>
+            <li class="mdl-menu__item">Contact</li>
+            <li class="mdl-menu__item">Legal information</li>
         </ul>
     </div>
-</nav>
+</header>
+
