--- a/src/main/resources/templates/twitterStream/stream.html
+++ b/src/main/resources/templates/twitterStream/stream.html
@@ -11,6 +11,8 @@
                 <button id="disconnect" class="btn btn-default" onclick="disconnect()" type="submit"
                         disabled="disabled">Disconnect
                 </button>
+                <!-- Information from here needs to be passed to the TwitterStreamController class - there needs to be
+                a parameter defined for the location that is being searched -->
                 <button id="current-location" class="btn btn-primary" onclick="useLocation()" type="button">Get Current
                     Location
                 </button>
