--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -9,33 +9,42 @@
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
+
 html, body {
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
+
 .demo-avatar {
     width: 48px;
     height: 48px;
     border-radius: 24px;
 }
-.demo-layout .demo-header .mdl-textfield {
+
+.demo-header .mdl-textfield {
     padding-top: 27px;
 }
-.demo-layout .mdl-layout__header .mdl-layout__drawer-button {
-    color: rgba(0, 0, 0, 0.54);
+
+.mdl-layout__header .mdl-layout__drawer-button {
+    color: black;
 }
+
 .mdl-layout__drawer .avatar {
     margin-bottom: 16px;
 }
+
 .demo-drawer {
     border: none;
 }
+
 /* iOS Safari specific workaround */
 .demo-drawer .mdl-menu__container {
     z-index: -1;
 }
+
 .demo-drawer .demo-navigation {
     z-index: -2;
 }
+
 /* END iOS Safari specific workaround */
 .demo-drawer .mdl-menu .mdl-menu__item {
     display: -webkit-box;
@@ -47,6 +56,7 @@ html, body {
     -ms-flex-align: center;
     align-items: center;
 }
+
 .demo-drawer-header {
     box-sizing: border-box;
     display: -webkit-box;
@@ -65,6 +75,7 @@ html, body {
     padding: 16px;
     height: 151px;
 }
+
 .demo-avatar-dropdown {
     display: -webkit-box;
     display: -webkit-flex;
@@ -89,7 +100,8 @@ html, body {
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
-.demo-layout .demo-navigation .mdl-navigation__link {
+
+.demo-navigation .mdl-navigation__link {
     display: -webkit-box !important;
     display: -webkit-flex !important;
     display: -ms-flexbox !important;
@@ -106,10 +118,12 @@ html, body {
     color: rgba(255, 255, 255, 0.56);
     font-weight: 500;
 }
-.demo-layout .demo-navigation .mdl-navigation__link:hover {
+
+.demo-navigation .mdl-navigation__link:hover {
     background-color: #00BCD4;
     color: #37474F;
 }
+
 .demo-navigation .mdl-navigation__link .material-icons {
     font-size: 24px;
     color: rgba(255, 255, 255, 0.56);
@@ -126,18 +140,23 @@ html, body {
     -ms-flex-align: center;
     align-items: center;
 }
+
 .demo-chart:nth-child(1) {
     color: #ACEC00;
 }
+
 .demo-chart:nth-child(2) {
     color: #00BBD6;
 }
+
 .demo-chart:nth-child(3) {
     color: #BA65C9;
 }
+
 .demo-chart:nth-child(4) {
     color: #EF3C79;
 }
+
 .demo-graphs {
     padding: 16px 32px;
     display: -webkit-box;
@@ -154,6 +173,7 @@ html, body {
     -ms-flex-align: stretch;
     align-items: stretch;
 }
+
 /* TODO: Find a proper solution to have the graphs
  * not float around outside their container in IE10/11.
  * Using a browserhacks.com solution for now.
@@ -161,13 +181,16 @@ html, body {
 _:-ms-input-placeholder, :root .demo-graphs {
     min-height: 664px;
 }
+
 _:-ms-input-placeholder, :root .demo-graph {
     max-height: 300px;
 }
+
 /* TODO end */
 .demo-graph:nth-child(1) {
     color: #00b9d8;
 }
+
 .demo-graph:nth-child(2) {
     color: #d9006e;
 }
@@ -181,26 +204,32 @@ _:-ms-input-placeholder, :root .demo-graph {
     -ms-flex-line-pack: start;
     align-content: flex-start;
 }
+
 .demo-cards .demo-separator {
     height: 32px;
 }
+
 .demo-cards .mdl-card__title.mdl-card__title {
     color: white;
     font-size: 24px;
     font-weight: 400;
 }
+
 .demo-cards ul {
     padding: 0;
 }
+
 .demo-cards h3 {
     font-size: 1em;
 }
+
 .demo-updates .mdl-card__title {
     min-height: 200px;
     background-image: url('images/dog.png');
     background-position: 90% 100%;
     background-repeat: no-repeat;
 }
+
 .demo-cards .mdl-card__actions a {
     color: #00BCD4;
     text-decoration: none;
@@ -209,19 +238,24 @@ _:-ms-input-placeholder, :root .demo-graph {
 .demo-options h3 {
     margin: 0;
 }
+
 .demo-options .mdl-checkbox__box-outline {
     border-color: rgba(255, 255, 255, 0.89);
 }
+
 .demo-options ul {
     margin: 0;
     list-style-type: none;
 }
+
 .demo-options li {
     margin: 4px 0;
 }
+
 .demo-options .material-icons {
     color: rgba(255, 255, 255, 0.89);
 }
+
 .demo-options .mdl-card__actions {
     height: 64px;
     display: -webkit-box;
