updating paths for heroku and removing keys from app.props

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,8 +5,8 @@
     <header th:replace="header/header">...</header>
     <div th:replace="header/sidebar">...</div>
     <main class="mdl-layout__content mdl-color--grey-100">
-        <div th:replace="/twitterStream/stream">stream</div>
-        <div th:replace="/twitterSearch/search">search</div>
+        <div th:replace="./twitterStream/stream">stream</div>
+        <div th:replace="./twitterSearch/search">search</div>
     </main>
 </div>
 </body>
