--- a/src/main/resources/templates/header/libs.html
+++ b/src/main/resources/templates/header/libs.html
@@ -4,11 +4,11 @@
     <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.indigo-pink.min.css">
-    <link href="/css/main.css" rel="stylesheet"/>
+    <link href="./css/main.css" rel="stylesheet"/>
     <script src="https://code.getmdl.io/1.2.1/material.min.js"></script>
     <script src="/webjars/jquery/jquery.min.js"></script>
     <script src="/webjars/sockjs-client/sockjs.min.js"></script>
     <script src="/webjars/stomp-websocket/stomp.min.js"></script>
-    <script src="/js/twitter-stream.js"></script>
+    <script src="./js/twitter-stream.js"></script>
     <title>Twitter Demo</title>
 </head>
