--- a/src/main/resources/templates/header/sidebar.html
+++ b/src/main/resources/templates/header/sidebar.html
@@ -22,6 +22,8 @@
                                                    role="presentation">inbox</i>Twitter Search</a>
         <a class="mdl-navigation__link" href="/twitter-stream"><i class="mdl-color-text--blue-grey-400 material-icons"
                                                    role="presentation">people</i>Twitter Stream</a>
+        <a class="mdl-navigation__link" href="/twitter-map"><i class="mdl-color-text--blue-grey-400 material-icons"
+                                                   role="presentation">people</i>Heatmap</a>
         <div class="mdl-layout-spacer"></div>
         <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons"
                                                    role="presentation">help_outline</i><span
