Add css property height for heatmap div

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -267,3 +267,7 @@ _:-ms-input-placeholder, :root .demo-graph {
     -ms-flex-align: center;
     align-items: center;
 }
+
+#map {
+    height: calc(100% - 72px);
+}
