Refactoring - remove map from sidebar

--- a/src/main/resources/templates/twitterStream/stream.html
+++ b/src/main/resources/templates/twitterStream/stream.html
@@ -20,6 +20,7 @@
             </div>
         </div>
     </div>
+    <div id="map"></div>
     <div class="row">
         <p th:text="${tweetCount}"></p>
         <ul class="mdl-list" id="tweet-content">
