--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
 #main-content {
     max-width: 940px;
@@ -13,13 +14,13 @@ html, body {
     font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 
-.demo-avatar {
+.twitter-avatar {
     width: 48px;
     height: 48px;
     border-radius: 24px;
 }
 
-.demo-header .mdl-textfield {
+.twitter-header .mdl-textfield {
     padding-top: 27px;
 }
 
@@ -31,21 +32,21 @@ html, body {
     margin-bottom: 16px;
 }
 
-.demo-drawer {
+.twitter-drawer {
     border: none;
 }
 
 /* iOS Safari specific workaround */
-.demo-drawer .mdl-menu__container {
+.twitter-drawer .mdl-menu__container {
     z-index: -1;
 }
 
-.demo-drawer .demo-navigation {
+.twitter-drawer .twitter-navigation {
     z-index: -2;
 }
 
 /* END iOS Safari specific workaround */
-.demo-drawer .mdl-menu .mdl-menu__item {
+.twitter-drawer .mdl-menu .mdl-menu__item {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -56,7 +57,7 @@ html, body {
     align-items: center;
 }
 
-.demo-drawer-header {
+.twitter-drawer-header {
     box-sizing: border-box;
     display: -webkit-box;
     display: -webkit-flex;
@@ -75,7 +76,7 @@ html, body {
     height: 151px;
 }
 
-.demo-avatar-dropdown {
+.twitter-avatar-dropdown {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -93,14 +94,14 @@ html, body {
     width: 100%;
 }
 
-.demo-navigation {
+.twitter-navigation {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
-.demo-navigation .mdl-navigation__link {
+.twitter-navigation .mdl-navigation__link {
     display: -webkit-box !important;
     display: -webkit-flex !important;
     display: -ms-flexbox !important;
@@ -118,45 +119,45 @@ html, body {
     font-weight: 500;
 }
 
-.demo-navigation .mdl-navigation__link:hover {
+.twitter-navigation .mdl-navigation__link:hover {
     background-color: #00BCD4;
     color: #37474F;
 }
 
-.demo-navigation .mdl-navigation__link .material-icons {
+.twitter-navigation .mdl-navigation__link .material-icons {
     font-size: 24px;
     color: rgba(255, 255, 255, 0.56);
     margin-right: 32px;
 }
 
-.demo-content {
+.twitter-content {
     max-width: 1080px;
 }
 
-.demo-charts {
+.twitter-charts {
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
 }
 
-.demo-chart:nth-child(1) {
+.twitter-chart:nth-child(1) {
     color: #ACEC00;
 }
 
-.demo-chart:nth-child(2) {
+.twitter-chart:nth-child(2) {
     color: #00BBD6;
 }
 
-.demo-chart:nth-child(3) {
+.twitter-chart:nth-child(3) {
     color: #BA65C9;
 }
 
-.demo-chart:nth-child(4) {
+.twitter-chart:nth-child(4) {
     color: #EF3C79;
 }
 
-.demo-graphs {
+.twitter-graphs {
     padding: 16px 32px;
     display: -webkit-box;
     display: -webkit-flex;
@@ -177,24 +178,24 @@ html, body {
  * not float around outside their container in IE10/11.
  * Using a browserhacks.com solution for now.
  */
-_:-ms-input-placeholder, :root .demo-graphs {
+_:-ms-input-placeholder, :root .twitter-graphs {
     min-height: 664px;
 }
 
-_:-ms-input-placeholder, :root .demo-graph {
+_:-ms-input-placeholder, :root .twitter-graph {
     max-height: 300px;
 }
 
 /* TODO end */
-.demo-graph:nth-child(1) {
+.twitter-graph:nth-child(1) {
     color: #00b9d8;
 }
 
-.demo-graph:nth-child(2) {
+.twitter-graph:nth-child(2) {
     color: #d9006e;
 }
 
-.demo-cards {
+.twitter-cards {
     -webkit-box-align: start;
     -webkit-align-items: flex-start;
     -ms-flex-align: start;
@@ -204,58 +205,58 @@ _:-ms-input-placeholder, :root .demo-graph {
     align-content: flex-start;
 }
 
-.demo-cards .demo-separator {
+.twitter-cards .twitter-separator {
     height: 32px;
 }
 
-.demo-cards .mdl-card__title.mdl-card__title {
+.twitter-cards .mdl-card__title.mdl-card__title {
     color: white;
     font-size: 24px;
     font-weight: 400;
 }
 
-.demo-cards ul {
+.twitter-cards ul {
     padding: 0;
 }
 
-.demo-cards h3 {
+.twitter-cards h3 {
     font-size: 1em;
 }
 
-.demo-updates .mdl-card__title {
+.twitter-updates .mdl-card__title {
     min-height: 200px;
     background-image: url('images/dog.png');
     background-position: 90% 100%;
     background-repeat: no-repeat;
 }
 
-.demo-cards .mdl-card__actions a {
+.twitter-cards .mdl-card__actions a {
     color: #00BCD4;
     text-decoration: none;
 }
 
-.demo-options h3 {
+.twitter-options h3 {
     margin: 0;
 }
 
-.demo-options .mdl-checkbox__box-outline {
+.twitter-options .mdl-checkbox__box-outline {
     border-color: rgba(255, 255, 255, 0.89);
 }
 
-.demo-options ul {
+.twitter-options ul {
     margin: 0;
     list-style-type: none;
 }
 
-.demo-options li {
+.twitter-options li {
     margin: 4px 0;
 }
 
-.demo-options .material-icons {
+.twitter-options .material-icons {
     color: rgba(255, 255, 255, 0.89);
 }
 
-.demo-options .mdl-card__actions {
+.twitter-options .mdl-card__actions {
     height: 64px;
     display: -webkit-box;
     display: -webkit-flex;
@@ -270,4 +271,104 @@ _:-ms-input-placeholder, :root .demo-graph {
 
 #map {
     height: 500px;
+}
+
+/*Login Form Style*/
+.login-page {
+    width: 360px;
+    padding: 8% 0 0;
+    margin: auto;
+}
+.form {
+    position: relative;
+    z-index: 1;
+    background: #FFFFFF;
+    max-width: 360px;
+    margin: 0 auto 100px;
+    padding: 45px;
+    text-align: center;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+}
+.form input {
+    font-family: "Roboto", sans-serif;
+    outline: 0;
+    background: #f2f2f2;
+    width: 100%;
+    border: 0;
+    margin: 0 0 15px;
+    padding: 15px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
+.form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #4CAF50;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    color: #FFFFFF;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+}
+.form button:hover,.form button:active,.form button:focus {
+    background: #43A047;
+}
+.form .message {
+    margin: 15px 0 0;
+    color: #b3b3b3;
+    font-size: 12px;
+}
+.form .message a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+.form .register-form {
+    display: none;
+}
+.container {
+    position: relative;
+    z-index: 1;
+    max-width: 300px;
+    margin: 0 auto;
+}
+.container:before, .container:after {
+    content: "";
+    display: block;
+    clear: both;
+}
+.container .info {
+    margin: 50px auto;
+    text-align: center;
+}
+.container .info h1 {
+    margin: 0 0 15px;
+    padding: 0;
+    font-size: 36px;
+    font-weight: 300;
+    color: #1a1a1a;
+}
+.container .info span {
+    color: #4d4d4d;
+    font-size: 12px;
+}
+.container .info span a {
+    color: #000000;
+    text-decoration: none;
+}
+.container .info span .fa {
+    color: #EF3B3A;
+}
+.login-body {
+    background: #76b852; /* fallback for old browsers */
+    background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+    background: -moz-linear-gradient(right, #76b852, #8DC26F);
+    background: -o-linear-gradient(right, #76b852, #8DC26F);
+    background: linear-gradient(to left, #76b852, #8DC26F);
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
