--- a/src/main/resources/templates/header/header.html
+++ b/src/main/resources/templates/header/header.html
@@ -1,8 +1,9 @@
-<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+<header class="twitter-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600"
+        xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="mdl-layout__header-row">
         <span class="mdl-layout-title">Twitter-Thing</span>
         <div class="mdl-layout-spacer"></div>
-        <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+        <div th:if="${hasAuth}" class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search">
                 <i class="material-icons">search</i>
             </label>
