--- a/src/main/resources/templates/twitterStream/stream.html
+++ b/src/main/resources/templates/twitterStream/stream.html
@@ -1,11 +1,7 @@
 <div th:if="${isStreaming}" class="mdl-shadow--12dp mdl-color--white mdl-cell mdl-cell--12-col" xmlns:th="http://www.w3.org/1999/xhtml">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-xs-12">
             <div class="form-group">
-                <button class="mdl-button mdl-js-button mdl-button--colored mdl-button--raised mdl-js-ripple-effect"
-                        onclick="useLocation()">
-                    Get Location
-                </button>
                 <button id="stop-stream-button"
                         class="mdl-button mdl-js-button mdl-button--accent mdl-button--raised mdl-js-ripple-effect"
                         onclick="disconnect()">
@@ -19,11 +15,12 @@
                 <i id="stream-spinner" class="mdl-spinner mdl-js-spinner is-active"></i>
             </div>
         </div>
-    </div>
-    <div id="map"></div>
-    <div class="row">
-        <p th:text="${tweetCount}"></p>
-        <ul class="mdl-list" id="tweet-content">
-        </ul>
+        <div class="col-xs-8">
+            <div id="map"></div>
+        </div>
+        <div class="col-xs-4">
+            <h3>Tweets</h3>
+            <ul class="mdl-list" id="tweet-content"></ul>
+        </div>
     </div>
 </div>
