--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -14,7 +14,7 @@
                 <div class="login mdl-textfield mdl-js-textfield">
                     <span class="mdl-textfield__error">Please enter a valid username</span>
                     <input class="mdl-textfield__input auth-username" type="text" placeholder="username"
-                           pattern="[A-Z,a-z]*"
+                           pattern="[A-Z,a-z,0-9]*"
                            aria-required="true"/>
                     <input class="auth" type="password" placeholder="password"/>
                     <button id="login-button">login</button>
